@@ -5,34 +5,54 @@ import com.anotame.sales.application.dto.CreateOrderRequest;
 import com.anotame.sales.application.dto.CustomerDto;
 import com.anotame.sales.application.dto.OrderItemDto;
 import com.anotame.sales.application.dto.UpdateOrderRequest;
+import com.anotame.sales.domain.exception.SalesConflictException;
+import com.anotame.sales.domain.exception.SalesNotFoundException;
+import com.anotame.sales.domain.exception.SalesValidationException;
+import com.anotame.sales.application.dto.CalendarDayResponse;
+import com.anotame.sales.application.dto.CalendarMonthResponse;
+import com.anotame.sales.application.dto.OrderItemResponse;
+import com.anotame.sales.application.dto.OrderItemServiceDto;
+import com.anotame.sales.application.dto.OrderResponse;
+import com.anotame.sales.application.dto.OrderSummaryPageResponse;
+import com.anotame.sales.application.dto.OrderSummaryResponse;
 import com.anotame.sales.domain.model.Customer;
 import com.anotame.sales.domain.model.Order;
 import com.anotame.sales.domain.model.OrderItem;
+import com.anotame.sales.domain.model.OrderItemService;
+import com.anotame.sales.domain.model.OrderPayment;
 import com.anotame.sales.application.port.output.CustomerRepositoryPort;
+import com.anotame.sales.application.port.output.OrderPaymentRepositoryPort;
 import com.anotame.sales.application.port.output.OrderRepositoryPort;
 import com.anotame.sales.application.port.output.AuditLogEntry;
 import com.anotame.sales.application.port.output.OrderAuditLogRepositoryPort;
+import com.anotame.sales.application.port.output.OrderSummaryCriteria;
+import com.anotame.sales.application.port.output.OrderSummaryProjection;
+import com.anotame.sales.application.port.output.OrderSummaryResult;
 import lombok.RequiredArgsConstructor;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.transaction.Transactional;
-import jakarta.ws.rs.WebApplicationException;
-import jakarta.ws.rs.core.Response;
 
 import java.math.BigDecimal;
 import java.security.MessageDigest;
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
+import java.time.YearMonth;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.time.temporal.ChronoUnit;
+import java.math.RoundingMode;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.stream.Collectors;
 
 import com.anotame.sales.application.dto.AtRiskCustomerItem;
 import com.anotame.sales.application.dto.DashboardMetricsResponse;
@@ -48,24 +68,26 @@ public class SalesService {
 
     private static final Set<String> VALID_STATUSES = Set.of(
             "RECEIVED", "IN_PROGRESS", "READY", "DELIVERED", "CANCELLED");
+    private static final Set<String> VALID_PAYMENT_METHODS = Set.of("CASH", "CARD", "TRANSFER");
+    private static final String DEFAULT_PAYMENT_METHOD = "CASH";
+    private static final String DELIVERY_SETTLEMENT_NOTE = "DELIVERY_SETTLEMENT";
 
     private final OrderRepositoryPort orderRepository;
     private final CustomerRepositoryPort customerRepository;
     private final OrderAuditLogRepositoryPort auditLogRepositoryPort;
-    private final com.anotame.sales.application.port.output.OrderPaymentRepositoryPort paymentRepository;
+    private final OrderPaymentRepositoryPort paymentRepository;
 
     @ConfigProperty(name = "app.timezone", defaultValue = "America/Mexico_City")
     String appTimezone;
 
     @Transactional
-    public com.anotame.sales.application.dto.OrderResponse createOrderDTO(CreateOrderRequest request, UUID userId,
+    public OrderResponse createOrderDTO(CreateOrderRequest request, UUID userId,
             UUID branchId) {
         Order saved = createOrder(request, userId, branchId);
         return mapToResponse(saved);
     }
 
-    @Transactional
-    public Order createOrder(CreateOrderRequest request, UUID userId, UUID branchId) {
+    private Order createOrder(CreateOrderRequest request, UUID userId, UUID branchId) {
         // 1. Resolve or Create Customer
         Customer customer = resolveCustomer(request.getCustomer());
 
@@ -84,8 +106,11 @@ public class SalesService {
         order.setCreatedBy(userId);
         order.setCreatedAt(OffsetDateTime.now(ZoneId.systemDefault()));
         order.setUpdatedAt(OffsetDateTime.now(ZoneId.systemDefault()));
-        // amountPaid starts at 0; the ledger entry below drives the denormalized cache
-        order.setAmountPaid(BigDecimal.ZERO);
+        // amountPaid is a denormalized cache backed by the payment ledger; seed it below
+        // (before the single persist) when an initial payment is supplied.
+        BigDecimal initialPayment = request.getAmountPaid();
+        boolean hasInitialPayment = initialPayment != null && initialPayment.compareTo(BigDecimal.ZERO) > 0;
+        order.setAmountPaid(hasInitialPayment ? initialPayment : BigDecimal.ZERO);
         order.setPaymentMethod(request.getPaymentMethod());
         order.setPriceListId(request.getPriceListId());
         order.setPriceListName(request.getPriceListName());
@@ -96,80 +121,136 @@ public class SalesService {
 
         // 3. Add Items & Calculate Total
         BigDecimal total = BigDecimal.ZERO;
-        int totalDuration = 0;
-
         for (OrderItemDto itemDto : request.getItems()) {
-            OrderItem item = new OrderItem();
-            item.setGarmentTypeId(itemDto.getGarmentTypeId());
-            item.setGarmentName(itemDto.getGarmentName());
-            item.setQuantity(itemDto.getQuantity());
-            item.setNotes(itemDto.getNotes());
-
-            BigDecimal itemSubtotal = BigDecimal.ZERO;
-
-            if (itemDto.getServices() != null) {
-                for (com.anotame.sales.application.dto.OrderItemServiceDto serviceDto : itemDto.getServices()) {
-                    com.anotame.sales.domain.model.OrderItemService service = new com.anotame.sales.domain.model.OrderItemService();
-                    service.setServiceId(serviceDto.getServiceId());
-                    service.setServiceName(serviceDto.getServiceName());
-                    service.setUnitPrice(serviceDto.getUnitPrice());
-                    service.setAdjustmentAmount(
-                            serviceDto.getAdjustmentAmount() != null ? serviceDto.getAdjustmentAmount()
-                                    : BigDecimal.ZERO);
-                    service.setAdjustmentReason(serviceDto.getAdjustmentReason());
-                    service.setDurationMin(serviceDto.getDurationMin() != null ? serviceDto.getDurationMin() : 0);
-
-                    item.addService(service);
-
-                    BigDecimal serviceTotal = service.getUnitPrice().add(service.getAdjustmentAmount());
-                    itemSubtotal = itemSubtotal.add(serviceTotal);
-                    totalDuration += (service.getDurationMin() * item.getQuantity());
-                }
-            }
-
-            // Subtotal = (Sum(Service Prices + Adjustments)) * Quantity
-            item.setUnitPrice(itemSubtotal); // Set unit price (per item subtotal)
-            BigDecimal lineTotal = itemSubtotal.multiply(BigDecimal.valueOf(item.getQuantity()));
-            item.setSubtotal(lineTotal);
-
+            OrderItem item = buildOrderItem(itemDto);
             order.addItem(item); // bi-directional setting
-            total = total.add(lineTotal);
+            total = total.add(item.getSubtotal());
         }
 
         order.setTotalAmount(total);
-        order.setTotalDurationMin(totalDuration);
+        order.setTotalDurationMin(calculateTotalDuration(order));
 
         Order saved = orderRepository.save(order);
 
-        // If an initial payment was provided at order creation, create the ledger entry
-        BigDecimal initialPayment = request.getAmountPaid();
-        if (initialPayment != null && initialPayment.compareTo(BigDecimal.ZERO) > 0) {
+        // Record the ledger entry backing amountPaid. Done after the save (needs the generated
+        // order id) but without re-saving the order — a second save() would reload the entity
+        // and delete+recreate every line item via orphanRemoval.
+        if (hasInitialPayment) {
             OffsetDateTime now = OffsetDateTime.now();
-            com.anotame.sales.domain.model.OrderPayment payment = new com.anotame.sales.domain.model.OrderPayment();
+            OrderPayment payment = new OrderPayment();
             payment.setOrderId(saved.getId());
             payment.setAmount(initialPayment);
             payment.setPaymentMethod(request.getPaymentMethod());
             payment.setRecordedAt(now);
             payment.setCreatedAt(now);
             paymentRepository.save(payment);
-
-            saved.setAmountPaid(initialPayment);
-            saved = orderRepository.save(saved);
         }
 
         return saved;
     }
 
     @Transactional
-    public java.util.List<com.anotame.sales.application.dto.OrderResponse> getAllOrders() {
+    public List<OrderResponse> getAllOrders() {
         return orderRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
-    private com.anotame.sales.application.dto.OrderResponse mapToResponse(Order order) {
+    @Transactional
+    public OrderSummaryPageResponse getOrderSummaries(
+            int page,
+            int size,
+            String search,
+            UUID garmentTypeId,
+            LocalDate deadline,
+            List<String> statuses) {
+        int normalizedPage = Math.max(page, 0);
+        int normalizedSize = Math.min(Math.max(size, 1), 100);
+        String normalizedSearch = search == null || search.isBlank() ? null : search.trim();
+        List<String> normalizedStatuses = normalizeStatuses(statuses);
+
+        OffsetDateTime deadlineStart = null;
+        OffsetDateTime deadlineEnd = null;
+        if (deadline != null) {
+            ZoneId zone = ZoneId.of(appTimezone);
+            deadlineStart = deadline.atStartOfDay(zone).toOffsetDateTime();
+            deadlineEnd = deadline.plusDays(1).atStartOfDay(zone).toOffsetDateTime();
+        }
+
+        OrderSummaryResult result = orderRepository.findSummaries(
+                normalizedPage,
+                normalizedSize,
+                new OrderSummaryCriteria(
+                        normalizedSearch,
+                        garmentTypeId,
+                        deadlineStart,
+                        deadlineEnd,
+                        normalizedStatuses));
+        List<OrderSummaryResponse> items = result.items().stream()
+                .map(this::mapToSummaryResponse)
+                .toList();
+        int totalPages = result.total() == 0
+                ? 0
+                : (int) Math.ceil((double) result.total() / normalizedSize);
+
+        return OrderSummaryPageResponse.builder()
+                .items(items)
+                .page(normalizedPage)
+                .size(normalizedSize)
+                .total(result.total())
+                .totalPages(totalPages)
+                .build();
+    }
+
+    private List<String> normalizeStatuses(List<String> statuses) {
+        if (statuses == null || statuses.isEmpty()) {
+            return List.of();
+        }
+
+        List<String> normalized = statuses.stream()
+                .filter(Objects::nonNull)
+                .flatMap(status -> Arrays.stream(status.split(",")))
+                .map(String::trim)
+                .filter(status -> !status.isBlank())
+                .map(status -> status.toUpperCase(Locale.ROOT))
+                .distinct()
+                .toList();
+
+        for (String status : normalized) {
+            if (!VALID_STATUSES.contains(status)) {
+                throw new SalesValidationException("Invalid order status: " + status);
+            }
+        }
+        return normalized;
+    }
+
+    private OrderSummaryResponse mapToSummaryResponse(OrderSummaryProjection order) {
+        CustomerDto custDto = new CustomerDto();
+        custDto.setId(order.customerId());
+        custDto.setFirstName(order.customerFirstName());
+        custDto.setLastName(order.customerLastName());
+        custDto.setEmail(order.customerEmail());
+        custDto.setPhoneNumber(order.customerPhoneNumber());
+
+        return OrderSummaryResponse.builder()
+                .id(order.id())
+                .ticketNumber(order.ticketNumber())
+                .customer(custDto)
+                .committedDeadline(order.committedDeadline())
+                .status(order.status())
+                .totalAmount(order.totalAmount())
+                .amountPaid(order.amountPaid())
+                .totalDurationMin(order.totalDurationMin())
+                .createdAt(order.createdAt())
+                .deliveredAt(order.deliveredAt())
+                .garmentNames(order.garmentNames())
+                .serviceNames(order.serviceNames())
+                .build();
+    }
+
+    private OrderResponse mapToResponse(Order order) {
         if (order.getCustomer() == null) {
-            throw new RuntimeException("Order customer cannot be null");
+            throw new IllegalStateException("Order customer cannot be null");
         }
         CustomerDto custDto = new CustomerDto();
         custDto.setId(order.getCustomer().getId());
@@ -178,12 +259,12 @@ public class SalesService {
         custDto.setEmail(order.getCustomer().getEmail());
         custDto.setPhoneNumber(order.getCustomer().getPhoneNumber());
 
-        java.util.List<com.anotame.sales.application.dto.OrderItemResponse> items = order.getItems().stream()
+        List<OrderItemResponse> items = order.getItems().stream()
                 .map(item -> {
-                    java.util.List<com.anotame.sales.application.dto.OrderItemServiceDto> serviceDtos = new java.util.ArrayList<>();
+                    List<OrderItemServiceDto> serviceDtos = new ArrayList<>();
                     if (item.getServices() != null) {
                         serviceDtos = item.getServices().stream().map(s -> {
-                            com.anotame.sales.application.dto.OrderItemServiceDto dto = new com.anotame.sales.application.dto.OrderItemServiceDto();
+                            OrderItemServiceDto dto = new OrderItemServiceDto();
                             dto.setServiceId(s.getServiceId());
                             dto.setServiceName(s.getServiceName());
                             dto.setUnitPrice(s.getUnitPrice());
@@ -191,10 +272,10 @@ public class SalesService {
                             dto.setAdjustmentReason(s.getAdjustmentReason());
                             dto.setDurationMin(s.getDurationMin()); // Map duration to DTO
                             return dto;
-                        }).collect(java.util.stream.Collectors.toList());
+                        }).toList();
                     }
 
-                    return com.anotame.sales.application.dto.OrderItemResponse.builder()
+                    return OrderItemResponse.builder()
                             .id(item.getId())
                             .garmentTypeId(item.getGarmentTypeId())
                             .garmentName(item.getGarmentName())
@@ -205,9 +286,9 @@ public class SalesService {
                             .notes(item.getNotes())
                             .build();
                 })
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
 
-        return com.anotame.sales.application.dto.OrderResponse.builder()
+        return OrderResponse.builder()
                 .id(order.getId())
                 .ticketNumber(order.getTicketNumber())
                 .customer(custDto)
@@ -228,9 +309,9 @@ public class SalesService {
     }
 
     @Transactional
-    public com.anotame.sales.application.dto.OrderResponse getOrder(UUID id) {
+    public OrderResponse getOrder(UUID id) {
         Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
+                .orElseThrow(() -> new SalesNotFoundException("Order not found"));
         return mapToResponse(order);
     }
 
@@ -240,24 +321,27 @@ public class SalesService {
     }
 
     public List<AuditLogResponse> getAuditLog(UUID orderId) {
-        return auditLogRepositoryPort.findByOrderId(orderId).stream()
-                .map(e -> new AuditLogResponse(e.userId(), e.fieldName(), e.oldValue(), e.newValue(), e.changedAt()))
-                .collect(java.util.stream.Collectors.toCollection(java.util.ArrayList::new));
+        List<AuditLogResponse> entries = new ArrayList<>();
+        for (var entry : auditLogRepositoryPort.findByOrderId(orderId)) {
+            entries.add(new AuditLogResponse(
+                    entry.userId(),
+                    entry.fieldName(),
+                    entry.oldValue(),
+                    entry.newValue(),
+                    entry.changedAt()));
+        }
+        return entries;
     }
 
     @Transactional
-    public com.anotame.sales.application.dto.OrderResponse updateOrder(UUID id, UpdateOrderRequest request, UUID userId,
+    public OrderResponse updateOrder(UUID id, UpdateOrderRequest request, UUID userId,
             String role) {
         Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new WebApplicationException(
-                        Response.status(404).entity(Map.of("error", "Pedido no encontrado")).build()));
+                .orElseThrow(() -> new SalesNotFoundException("Pedido no encontrado"));
 
         // Status lock: DELIVERED and CANCELLED orders cannot be edited
         if ("DELIVERED".equals(order.getStatus()) || "CANCELLED".equals(order.getStatus())) {
-            throw new WebApplicationException(
-                    Response.status(409)
-                            .entity(Map.of("error", "No se puede editar un pedido entregado o cancelado"))
-                            .build());
+            throw new SalesConflictException("No se puede editar un pedido entregado o cancelado");
         }
 
         // Audit log: record per-field changes before applying updates
@@ -287,52 +371,13 @@ public class SalesService {
             if (request.getItems() != null) {
                 order.getItems().clear();
                 BigDecimal total = BigDecimal.ZERO;
-
                 for (OrderItemDto itemDto : request.getItems()) {
-                OrderItem item = new OrderItem();
-                item.setGarmentTypeId(itemDto.getGarmentTypeId());
-                item.setGarmentName(itemDto.getGarmentName());
-                item.setQuantity(itemDto.getQuantity());
-                item.setNotes(itemDto.getNotes());
-
-                BigDecimal itemSubtotal = BigDecimal.ZERO;
-
-                if (itemDto.getServices() != null) {
-                    for (com.anotame.sales.application.dto.OrderItemServiceDto serviceDto : itemDto.getServices()) {
-                        com.anotame.sales.domain.model.OrderItemService service = new com.anotame.sales.domain.model.OrderItemService();
-                        service.setServiceId(serviceDto.getServiceId());
-                        service.setServiceName(serviceDto.getServiceName());
-                        service.setUnitPrice(serviceDto.getUnitPrice());
-                        service.setAdjustmentAmount(
-                                serviceDto.getAdjustmentAmount() != null ? serviceDto.getAdjustmentAmount()
-                                        : BigDecimal.ZERO);
-                        service.setAdjustmentReason(serviceDto.getAdjustmentReason());
-                        service.setDurationMin(serviceDto.getDurationMin() != null ? serviceDto.getDurationMin() : 0);
-
-                        item.addService(service);
-
-                        BigDecimal serviceTotal = service.getUnitPrice().add(service.getAdjustmentAmount());
-                        itemSubtotal = itemSubtotal.add(serviceTotal);
-                    }
+                    OrderItem item = buildOrderItem(itemDto);
+                    order.addItem(item);
+                    total = total.add(item.getSubtotal());
                 }
-
-                BigDecimal lineTotal = itemSubtotal.multiply(BigDecimal.valueOf(item.getQuantity()));
-                item.setUnitPrice(itemSubtotal);
-                item.setSubtotal(lineTotal);
-
-                order.addItem(item);
-                total = total.add(lineTotal);
-            }
-            order.setTotalAmount(total);
-
-            // Recalculate total duration
-            int totalDuration = order.getItems().stream()
-                    .filter(item -> !item.isDeleted())
-                    .mapToInt(item -> item.getServices().stream()
-                            .mapToInt(s -> s.getDurationMin() != null ? s.getDurationMin() : 0)
-                            .sum() * (item.getQuantity() != null ? item.getQuantity() : 1))
-                    .sum();
-            order.setTotalDurationMin(totalDuration);
+                order.setTotalAmount(total);
+                order.setTotalDurationMin(calculateTotalDuration(order));
             }
         } else {
             // EMPLOYEE (OPERATOR): only notes, committedDeadline
@@ -359,52 +404,44 @@ public class SalesService {
     @Transactional
     public void updateOrderStatus(UUID id, String status) {
         if (status == null || !VALID_STATUSES.contains(status)) {
-            throw new WebApplicationException(
-                    Response.status(400)
-                            .entity(Map.of("error", "Estado inválido: " + status))
-                            .build());
+            throw new SalesValidationException("Estado inválido: " + status);
         }
         Order order = orderRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
+                .orElseThrow(() -> new SalesNotFoundException("Order not found"));
         order.setStatus(status);
         order.setUpdatedAt(OffsetDateTime.now(ZoneId.systemDefault()));
         orderRepository.save(order);
     }
 
     @Transactional
-    public void deliverOrder(UUID orderId, String pickupCode, UUID userId) {
+    public void deliverOrder(UUID orderId, String pickupCode, UUID userId, boolean markFullyPaid,
+                             String paymentMethod) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new WebApplicationException(
-                        Response.status(404).entity(Map.of("error", "Pedido no encontrado")).build()));
+                .orElseThrow(() -> new SalesNotFoundException("Pedido no encontrado"));
 
         if (!"READY".equals(order.getStatus())) {
-            throw new WebApplicationException(
-                    Response.status(409)
-                            .entity(Map.of("error", "Solo se pueden entregar pedidos en estado LISTO"))
-                            .build());
+            throw new SalesConflictException("Solo se pueden entregar pedidos en estado LISTO");
         }
 
         if (order.getPickupCode() == null || order.getPickupCode().isEmpty()) {
-            throw new WebApplicationException(
-                    Response.status(400)
-                            .entity(Map.of("error", "Código de recogida no está disponible para este pedido"))
-                            .build());
+            throw new SalesValidationException("Código de recogida no está disponible para este pedido");
         }
 
         boolean valid = MessageDigest.isEqual(
-                order.getPickupCode().getBytes(java.nio.charset.StandardCharsets.UTF_8),
-                pickupCode.getBytes(java.nio.charset.StandardCharsets.UTF_8));
+                order.getPickupCode().getBytes(StandardCharsets.UTF_8),
+                pickupCode.getBytes(StandardCharsets.UTF_8));
         if (!valid) {
-            throw new WebApplicationException(
-                    Response.status(400)
-                            .entity(Map.of("error", "Código de recogida incorrecto"))
-                            .build());
+            throw new SalesValidationException("Código de recogida incorrecto");
         }
 
-        OffsetDateTime deliveredAt = OffsetDateTime.now();
+        OffsetDateTime deliveredAt = OffsetDateTime.now(ZoneId.systemDefault());
+        if (markFullyPaid) {
+            settleRemainingBalance(order, orderId, paymentMethod, deliveredAt);
+        }
+
         order.setStatus("DELIVERED");
         order.setDeliveredAt(deliveredAt);
-        order.setUpdatedAt(OffsetDateTime.now(ZoneId.systemDefault()));
+        order.setUpdatedAt(deliveredAt);
         orderRepository.save(order);
 
         auditLogRepositoryPort.save(buildAuditEntry(
@@ -413,16 +450,101 @@ public class SalesService {
                 deliveredAt));
     }
 
+    private void settleRemainingBalance(Order order, UUID orderId, String requestedPaymentMethod,
+                                        OffsetDateTime recordedAt) {
+        BigDecimal totalAmount = order.getTotalAmount() != null ? order.getTotalAmount() : BigDecimal.ZERO;
+        BigDecimal amountPaid = paymentRepository.sumByOrderId(orderId);
+        BigDecimal remainingBalance = totalAmount.subtract(amountPaid);
+
+        if (remainingBalance.compareTo(BigDecimal.ZERO) <= 0) {
+            order.setAmountPaid(amountPaid);
+            return;
+        }
+
+        OrderPayment payment = new OrderPayment();
+        payment.setOrderId(orderId);
+        payment.setAmount(remainingBalance);
+        payment.setPaymentMethod(resolvePaymentMethod(requestedPaymentMethod, order.getPaymentMethod()));
+        payment.setNotes(DELIVERY_SETTLEMENT_NOTE);
+        payment.setRecordedAt(recordedAt);
+        payment.setCreatedAt(recordedAt);
+        paymentRepository.save(payment);
+
+        order.setAmountPaid(amountPaid.add(remainingBalance));
+    }
+
+    private String resolvePaymentMethod(String requestedPaymentMethod, String orderPaymentMethod) {
+        if (requestedPaymentMethod != null && !requestedPaymentMethod.isBlank()) {
+            String normalized = requestedPaymentMethod.trim().toUpperCase();
+            if (VALID_PAYMENT_METHODS.contains(normalized)) {
+                return normalized;
+            }
+            throw new SalesValidationException("Método de pago inválido: " + requestedPaymentMethod);
+        }
+
+        if (orderPaymentMethod != null && !orderPaymentMethod.isBlank()) {
+            String normalized = orderPaymentMethod.trim().toUpperCase();
+            if (VALID_PAYMENT_METHODS.contains(normalized)) {
+                return normalized;
+            }
+        }
+
+        return DEFAULT_PAYMENT_METHOD;
+    }
+
+    /**
+     * Builds a persistent-ready {@link OrderItem} from its DTO, attaching services and computing
+     * the per-item unit price (sum of service prices + adjustments) and line subtotal (× quantity).
+     */
+    private OrderItem buildOrderItem(OrderItemDto itemDto) {
+        OrderItem item = new OrderItem();
+        item.setGarmentTypeId(itemDto.getGarmentTypeId());
+        item.setGarmentName(itemDto.getGarmentName());
+        item.setQuantity(itemDto.getQuantity());
+        item.setNotes(itemDto.getNotes());
+
+        BigDecimal itemSubtotal = BigDecimal.ZERO;
+        if (itemDto.getServices() != null) {
+            for (OrderItemServiceDto serviceDto : itemDto.getServices()) {
+                OrderItemService service = new OrderItemService();
+                service.setServiceId(serviceDto.getServiceId());
+                service.setServiceName(serviceDto.getServiceName());
+                service.setUnitPrice(serviceDto.getUnitPrice());
+                service.setAdjustmentAmount(
+                        serviceDto.getAdjustmentAmount() != null ? serviceDto.getAdjustmentAmount() : BigDecimal.ZERO);
+                service.setAdjustmentReason(serviceDto.getAdjustmentReason());
+                service.setDurationMin(serviceDto.getDurationMin() != null ? serviceDto.getDurationMin() : 0);
+
+                item.addService(service);
+                itemSubtotal = itemSubtotal.add(service.getUnitPrice().add(service.getAdjustmentAmount()));
+            }
+        }
+
+        item.setUnitPrice(itemSubtotal);
+        item.setSubtotal(itemSubtotal.multiply(BigDecimal.valueOf(item.getQuantity())));
+        return item;
+    }
+
+    /** Sums duration across all non-deleted items: Σ(service minutes) × item quantity. */
+    private int calculateTotalDuration(Order order) {
+        return order.getItems().stream()
+                .filter(item -> !item.isDeleted())
+                .mapToInt(item -> item.getServices().stream()
+                        .mapToInt(s -> s.getDurationMin() != null ? s.getDurationMin() : 0)
+                        .sum() * (item.getQuantity() != null ? item.getQuantity() : 1))
+                .sum();
+    }
+
     private Customer resolveCustomer(CustomerDto dto) {
         UUID customerId = dto.getId();
         if (customerId != null) {
             return customerRepository.findById(customerId)
-                    .orElseThrow(() -> new RuntimeException("Customer not found"));
+                    .orElseThrow(() -> new SalesNotFoundException("Customer not found"));
         }
 
         // Check by existing unique fields
         if (dto.getPhoneNumber() != null) {
-            var existing = customerRepository.findByPhoneNumber(dto.getPhoneNumber()); // Assuming port has this
+            var existing = customerRepository.findByPhoneNumber(dto.getPhoneNumber());
             if (existing.isPresent())
                 return existing.get();
         }
@@ -440,12 +562,18 @@ public class SalesService {
 
     @Transactional
     public DashboardMetricsResponse getDashboardMetrics() {
+        return getDashboardMetrics(null);
+    }
+
+    @Transactional
+    public DashboardMetricsResponse getDashboardMetrics(String monthParam) {
         ZoneId zone = ZoneId.of(appTimezone);
         String zoneId = zone.getId();
         LocalDate today = LocalDate.now(zone);
+        YearMonth selectedMonth = parseMonthParam(monthParam, today);
         OffsetDateTime startOfDay = today.atStartOfDay(zone).toOffsetDateTime();
         OffsetDateTime startOfTomorrow = today.plusDays(1).atStartOfDay(zone).toOffsetDateTime();
-        OffsetDateTime startOfMonth = today.withDayOfMonth(1).atStartOfDay(zone).toOffsetDateTime();
+        OffsetDateTime startOfMonth = selectedMonth.atDay(1).atStartOfDay(zone).toOffsetDateTime();
         OffsetDateTime startOfNextMonth = startOfMonth.plusMonths(1);
         OffsetDateTime sevenDaysAgo = today.minusDays(6).atStartOfDay(zone).toOffsetDateTime();
 
@@ -463,26 +591,19 @@ public class SalesService {
         BigDecimal monthlyRevenue = orderRepository.sumPaidAmountInRange(startOfMonth, startOfNextMonth);
         BigDecimal pendingDebt = orderRepository.sumPendingDebt();
 
-        // Chart Data
+        // Chart Data — index raw rows by date (row[0]) for O(1) lookup while filling every day.
+        // row[0] is Date (java.sql.Date) or LocalDate, row[1] is BigDecimal.
         List<Object[]> rawChartData = orderRepository.getWeeklyRevenueData(sevenDaysAgo, zoneId);
+        Map<String, Object[]> chartByDate = rawChartData.stream()
+                .collect(Collectors.toMap(row -> row[0].toString(), row -> row, (a, b) -> a));
         List<DashboardMetricsResponse.WeeklyChartPoint> chartData = new ArrayList<>();
 
         // Ensure all 7 days are populated even if empty
         DateTimeFormatter dtf = DateTimeFormatter.ISO_LOCAL_DATE;
         for (int i = 6; i >= 0; i--) {
-            LocalDate d = today.minusDays(i);
-            String dateStr = d.format(dtf);
-
-            BigDecimal amount = BigDecimal.ZERO;
-            for (Object[] row : rawChartData) {
-                // row[0] is Date (java.sql.Date) or LocalDate, row[1] is BigDecimal
-                String rowDate = row[0].toString();
-                if (rowDate.equals(dateStr)) {
-                    amount = row[1] != null ? (BigDecimal) row[1] : BigDecimal.ZERO;
-                    break;
-                }
-            }
-
+            String dateStr = today.minusDays(i).format(dtf);
+            Object[] row = chartByDate.get(dateStr);
+            BigDecimal amount = row != null && row[1] != null ? (BigDecimal) row[1] : BigDecimal.ZERO;
             chartData.add(DashboardMetricsResponse.WeeklyChartPoint.builder()
                     .date(dateStr)
                     .totalPaid(amount)
@@ -492,18 +613,14 @@ public class SalesService {
         // Daily Workload (Next 30 days) — dates grouped in local timezone so calendar labels match user expectations
         OffsetDateTime endOfWorkloadRange = startOfDay.plusDays(30);
         List<Object[]> rawWorkloadData = orderRepository.getDailyWorkload(startOfDay, endOfWorkloadRange, zoneId);
+        Map<String, Object[]> workloadByDate = rawWorkloadData.stream()
+                .collect(Collectors.toMap(row -> row[0].toString(), row -> row, (a, b) -> a));
         List<DashboardMetricsResponse.WorkloadDayPoint> dailyWorkload = new ArrayList<>();
 
         for (int i = 0; i < 30; i++) {
-            LocalDate d = today.plusDays(i);
-            String dateStr = d.format(dtf);
-            long mins = 0;
-            for (Object[] row : rawWorkloadData) {
-                if (row[0].toString().equals(dateStr)) {
-                    mins = row[1] != null ? ((Number) row[1]).longValue() : 0;
-                    break;
-                }
-            }
+            String dateStr = today.plusDays(i).format(dtf);
+            Object[] row = workloadByDate.get(dateStr);
+            long mins = row != null && row[1] != null ? ((Number) row[1]).longValue() : 0;
             dailyWorkload.add(DashboardMetricsResponse.WorkloadDayPoint.builder()
                     .date(dateStr)
                     .totalMinutesUsed(mins)
@@ -575,10 +692,10 @@ public class SalesService {
             BigDecimal revenue = row[1] != null ? (BigDecimal) row[1] : BigDecimal.ZERO;
             long totalDurationMin = ((Number) row[3]).longValue();
             BigDecimal revenuePerMinute = totalDurationMin > 0
-                    ? revenue.divide(BigDecimal.valueOf(totalDurationMin), 2, java.math.RoundingMode.HALF_UP)
+                    ? revenue.divide(BigDecimal.valueOf(totalDurationMin), 2, RoundingMode.HALF_UP)
                     : BigDecimal.ZERO;
             BigDecimal percentShare = totalServiceRevenue.compareTo(BigDecimal.ZERO) > 0
-                    ? revenue.divide(totalServiceRevenue, 4, java.math.RoundingMode.HALF_UP)
+                    ? revenue.divide(totalServiceRevenue, 4, RoundingMode.HALF_UP)
                             .multiply(new BigDecimal("100"))
                     : BigDecimal.ZERO;
 
@@ -608,17 +725,17 @@ public class SalesService {
         }
 
         // 4. Get At-Risk Customers (no order in atRiskDays+ days)
-        OffsetDateTime atRiskCutoff = now.minusDays(atRiskDays);
-        List<Object[]> rawAtRiskData = orderRepository.getAtRiskCustomers(atRiskCutoff, 10);
+        int safeAtRiskDays = Math.max(1, atRiskDays);
+        LocalDate atRiskCutoff = today.minusDays(safeAtRiskDays);
+        List<Object[]> rawAtRiskData = orderRepository.getAtRiskCustomers(atRiskCutoff, zoneId, 10);
         List<AtRiskCustomerItem> atRiskCustomers = new ArrayList<>();
-        LocalDate todayForAtRisk = today;
 
         for (Object[] row : rawAtRiskData) {
             String lastOrderDateStr = (String) row[3];
-            long daysSince = 0;
+            Long daysSince = null;
             if (lastOrderDateStr != null) {
                 LocalDate lastOrderDate = LocalDate.parse(lastOrderDateStr);
-                daysSince = ChronoUnit.DAYS.between(lastOrderDate, todayForAtRisk);
+                daysSince = ChronoUnit.DAYS.between(lastOrderDate, today);
             }
             atRiskCustomers.add(AtRiskCustomerItem.builder()
                     .customerId((UUID) row[0])
@@ -639,7 +756,7 @@ public class SalesService {
             if (totalCustomersInPeriod > 0) {
                 repeatRate = BigDecimal.valueOf(repeatCustomers)
                         .multiply(BigDecimal.valueOf(100))
-                        .divide(BigDecimal.valueOf(totalCustomersInPeriod), 2, java.math.RoundingMode.HALF_UP);
+                        .divide(BigDecimal.valueOf(totalCustomersInPeriod), 2, RoundingMode.HALF_UP);
             }
         }
 
@@ -654,46 +771,36 @@ public class SalesService {
                 .build();
     }
 
-    public com.anotame.sales.application.dto.CalendarMonthResponse getCalendarData(String monthParam, int dailyCapacityMinutes) {
+    public CalendarMonthResponse getCalendarData(String monthParam, int dailyCapacityMinutes) {
         ZoneId zone = ZoneId.of(appTimezone);
         String zoneId = zone.getId();
         LocalDate today = LocalDate.now(zone);
-
-        // Parse month parameter (YYYY-MM format)
-        LocalDate monthStart;
-        if (monthParam != null && !monthParam.isEmpty()) {
-            monthStart = LocalDate.parse(monthParam + "-01");
-        } else {
-            monthStart = today.withDayOfMonth(1);
-        }
+        LocalDate monthStart = parseMonthParam(monthParam, today).atDay(1);
 
         // Calculate month boundaries
         LocalDate monthEnd = monthStart.plusMonths(1);
         OffsetDateTime monthStartOdt = monthStart.atStartOfDay(zone).toOffsetDateTime();
         OffsetDateTime monthEndOdt = monthEnd.atStartOfDay(zone).toOffsetDateTime();
 
-        // Fetch daily aggregates from repository
+        // Fetch daily aggregates from repository, indexed by date (row[0]) for O(1) lookup.
         List<Object[]> rawData = orderRepository.getCalendarMonthData(monthStartOdt, monthEndOdt, zoneId);
-        List<com.anotame.sales.application.dto.CalendarDayResponse> days = new ArrayList<>();
+        Map<Object, Object[]> dataByDate = rawData.stream()
+                .collect(Collectors.toMap(row -> row[0], row -> row, (a, b) -> a));
+        List<CalendarDayResponse> days = new ArrayList<>();
 
         // Build complete month calendar (fill in missing days)
         LocalDate current = monthStart;
         while (current.isBefore(monthEnd)) {
             final LocalDate day = current;
 
-            // Find data for this day
-            Object[] dayData = rawData.stream()
-                    .filter(row -> row[0].equals(day))
-                    .findFirst()
-                    .orElse(null);
-
+            Object[] dayData = dataByDate.get(day);
             Integer totalMinutes = dayData != null ? ((Number) dayData[1]).intValue() : 0;
             Integer orderCount = dayData != null ? ((Number) dayData[2]).intValue() : 0;
             BigDecimal scheduledRevenue = dayData != null ? (BigDecimal) dayData[3] : BigDecimal.ZERO;
 
             double capacityPercent = totalMinutes > 0 ? (totalMinutes * 100.0) / dailyCapacityMinutes : 0.0;
 
-            days.add(com.anotame.sales.application.dto.CalendarDayResponse.builder()
+            days.add(CalendarDayResponse.builder()
                     .date(day)
                     .totalMinutesUsed(totalMinutes)
                     .orderCount(orderCount)
@@ -706,8 +813,20 @@ public class SalesService {
             current = current.plusDays(1);
         }
 
-        return com.anotame.sales.application.dto.CalendarMonthResponse.builder()
+        return CalendarMonthResponse.builder()
                 .days(days)
                 .build();
+    }
+
+    private YearMonth parseMonthParam(String monthParam, LocalDate fallbackDate) {
+        if (monthParam == null || monthParam.isBlank()) {
+            return YearMonth.from(fallbackDate);
+        }
+
+        try {
+            return YearMonth.parse(monthParam);
+        } catch (DateTimeParseException e) {
+            throw new SalesValidationException("month must use YYYY-MM format");
+        }
     }
 }
