@@ -1,6 +1,9 @@
 package com.anotame.sales.infrastructure.persistence.adapter;
 
 import com.anotame.sales.application.port.output.OrderRepositoryPort;
+import com.anotame.sales.application.port.output.OrderSummaryCriteria;
+import com.anotame.sales.application.port.output.OrderSummaryProjection;
+import com.anotame.sales.application.port.output.OrderSummaryResult;
 import com.anotame.sales.domain.model.Order;
 import com.anotame.sales.domain.model.OrderItem;
 import com.anotame.sales.infrastructure.persistence.entity.CustomerEntity;
@@ -9,25 +12,28 @@ import com.anotame.sales.infrastructure.persistence.entity.OrderItemEntity;
 import com.anotame.sales.infrastructure.persistence.repository.CustomerRepository;
 import com.anotame.sales.infrastructure.persistence.repository.OrderRepository;
 import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.inject.Inject;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.Query;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 
+import java.math.BigDecimal;
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
+@RequiredArgsConstructor
 public class OrderPersistenceAdapter implements OrderRepositoryPort {
 
-    @Inject
-    OrderRepository orderRepository;
-
-    @Inject
-    CustomerRepository customerRepository;
-
-    @Inject
-    jakarta.persistence.EntityManager em;
+    private final OrderRepository orderRepository;
+    private final CustomerRepository customerRepository;
+    private final EntityManager em;
 
     @Override
     @Transactional
@@ -35,8 +41,9 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
         OrderEntity entity;
         if (order.getId() != null) {
             entity = orderRepository.findById(order.getId());
-            if (entity == null)
+            if (entity == null) {
                 entity = new OrderEntity();
+            }
         } else {
             entity = new OrderEntity();
         }
@@ -59,8 +66,6 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
         entity.setPriceListId(order.getPriceListId());
         entity.setPriceListName(order.getPriceListName());
 
-        // Map items
-        // Simplified: Clear and re-add for now
         entity.getItems().clear();
         if (order.getItems() != null) {
             for (OrderItem item : order.getItems()) {
@@ -72,7 +77,6 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
                 ie.setSubtotal(item.getSubtotal());
                 ie.setNotes(item.getNotes());
 
-                // Map Services
                 if (item.getServices() != null) {
                     for (com.anotame.sales.domain.model.OrderItemService service : item.getServices()) {
                         com.anotame.sales.infrastructure.persistence.entity.OrderItemServiceEntity se = new com.anotame.sales.infrastructure.persistence.entity.OrderItemServiceEntity();
@@ -81,19 +85,17 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
                         se.setUnitPrice(service.getUnitPrice());
                         se.setAdjustmentAmount(service.getAdjustmentAmount());
                         se.setAdjustmentReason(service.getAdjustmentReason());
-                        se.setDurationMin(service.getDurationMin()); // Map duration
-                        se.setOrderItem(ie); // Link parent
+                        se.setDurationMin(service.getDurationMin());
+                        se.setOrderItem(ie);
                         ie.getServices().add(se);
                     }
                 }
 
-                entity.addItem(ie); // This also sets the order in OrderEntity.addItem if correctly implemented
-                // Manually ensure link if addItem is simple add
+                entity.addItem(ie);
                 ie.setOrder(entity);
             }
         }
 
-        // Link Customer
         if (order.getCustomer() != null && order.getCustomer().getId() != null) {
             CustomerEntity customerEntity = customerRepository.findById(order.getCustomer().getId());
             if (customerEntity != null) {
@@ -107,7 +109,59 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
 
     @Override
     public List<Order> findAll() {
-        return orderRepository.listAll().stream().map(this::toDomain).collect(Collectors.toList());
+        return orderRepository.listAll().stream().map(this::toDomain).toList();
+    }
+
+    @Override
+    public OrderSummaryResult findSummaries(int page, int size, OrderSummaryCriteria criteria) {
+        String fromClause = buildSummaryFromClause(criteria);
+
+        Query countQuery = em.createQuery("select count(o.id)" + fromClause);
+        bindSummaryParameters(countQuery, criteria);
+        long total = ((Number) countQuery.getSingleResult()).longValue();
+
+        var dataQuery = em.createQuery(
+                "select o.id, o.ticketNumber, c.id, c.firstName, c.lastName, c.email, c.phoneNumber, " +
+                        "o.committedDeadline, o.status, o.totalAmount, o.amountPaid, o.totalDurationMin, " +
+                        "o.createdAt, o.deliveredAt" +
+                        fromClause +
+                        " order by o.createdAt desc, o.ticketNumber desc",
+                Object[].class);
+        bindSummaryParameters(dataQuery, criteria);
+        dataQuery.setFirstResult(page * size);
+        dataQuery.setMaxResults(size);
+
+        var rows = dataQuery.getResultList();
+        List<UUID> orderIds = new ArrayList<>(rows.size());
+        for (var row : rows) {
+            orderIds.add((UUID) row[0]);
+        }
+        Map<UUID, List<String>> garmentNames = findGarmentNames(orderIds);
+        Map<UUID, List<String>> serviceNames = findServiceNames(orderIds);
+
+        List<OrderSummaryProjection> items = new ArrayList<>(rows.size());
+        for (var row : rows) {
+            UUID orderId = (UUID) row[0];
+            items.add(new OrderSummaryProjection(
+                    orderId,
+                    (String) row[1],
+                    (UUID) row[2],
+                    (String) row[3],
+                    (String) row[4],
+                    (String) row[5],
+                    (String) row[6],
+                    (OffsetDateTime) row[7],
+                    (String) row[8],
+                    (BigDecimal) row[9],
+                    (BigDecimal) row[10],
+                    (Integer) row[11],
+                    (OffsetDateTime) row[12],
+                    (OffsetDateTime) row[13],
+                    garmentNames.getOrDefault(orderId, List.of()),
+                    serviceNames.getOrDefault(orderId, List.of())));
+        }
+
+        return new OrderSummaryResult(items, total);
     }
 
     @Override
@@ -185,8 +239,8 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
     }
 
     @Override
-    public java.util.List<Object[]> getAtRiskCustomers(java.time.OffsetDateTime cutoffDate, int limit) {
-        return orderRepository.getAtRiskCustomers(cutoffDate, limit);
+    public java.util.List<Object[]> getAtRiskCustomers(java.time.LocalDate cutoffDate, String zoneId, int limit) {
+        return orderRepository.getAtRiskCustomers(cutoffDate, zoneId, limit);
     }
 
     @Override
@@ -217,7 +271,6 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
         o.setPriceListId(entity.getPriceListId());
         o.setPriceListName(entity.getPriceListName());
 
-        // Map Customer
         if (entity.getCustomer() != null) {
             com.anotame.sales.domain.model.Customer c = new com.anotame.sales.domain.model.Customer();
             c.setId(entity.getCustomer().getId());
@@ -228,7 +281,6 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
             o.setCustomer(c);
         }
 
-        // Map Items
         if (entity.getItems() != null) {
             for (OrderItemEntity ie : entity.getItems()) {
                 OrderItem item = new OrderItem();
@@ -240,7 +292,6 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
                 item.setSubtotal(ie.getSubtotal());
                 item.setNotes(ie.getNotes());
 
-                // Map Services
                 if (ie.getServices() != null) {
                     for (com.anotame.sales.infrastructure.persistence.entity.OrderItemServiceEntity se : ie
                             .getServices()) {
@@ -251,7 +302,7 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
                         s.setUnitPrice(se.getUnitPrice());
                         s.setAdjustmentAmount(se.getAdjustmentAmount());
                         s.setAdjustmentReason(se.getAdjustmentReason());
-                        s.setDurationMin(se.getDurationMin()); // Map back
+                        s.setDurationMin(se.getDurationMin());
                         item.addService(s);
                     }
                 }
@@ -265,6 +316,93 @@ public class OrderPersistenceAdapter implements OrderRepositoryPort {
     @Override
     public Object[] getRepeatRate(java.time.OffsetDateTime start, java.time.OffsetDateTime end) {
         return orderRepository.getRepeatRate(start, end);
+    }
+
+    private String buildSummaryFromClause(OrderSummaryCriteria criteria) {
+        List<String> predicates = new ArrayList<>();
+        if (criteria.search() != null) {
+            predicates.add("(" +
+                    "lower(o.ticketNumber) like :search or " +
+                    "lower(c.firstName) like :search or " +
+                    "lower(coalesce(c.lastName, '')) like :search or " +
+                    "lower(coalesce(c.phoneNumber, '')) like :search" +
+                    ")");
+        }
+        if (criteria.garmentTypeId() != null) {
+            predicates.add("exists (" +
+                    "select i.id from OrderItemEntity i " +
+                    "where i.order = o and i.garmentTypeId = :garmentTypeId" +
+                    ")");
+        }
+        if (criteria.deadlineStart() != null && criteria.deadlineEnd() != null) {
+            predicates.add("o.committedDeadline >= :deadlineStart and o.committedDeadline < :deadlineEnd");
+        }
+        if (criteria.statuses() != null && !criteria.statuses().isEmpty()) {
+            predicates.add("o.status in :statuses");
+        }
+
+        if (predicates.isEmpty()) {
+            return " from OrderEntity o join o.customer c";
+        }
+        return " from OrderEntity o join o.customer c where " + String.join(" and ", predicates);
+    }
+
+    private void bindSummaryParameters(Query query, OrderSummaryCriteria criteria) {
+        if (criteria.search() != null) {
+            query.setParameter("search", "%" + criteria.search().toLowerCase(Locale.ROOT) + "%");
+        }
+        if (criteria.garmentTypeId() != null) {
+            query.setParameter("garmentTypeId", criteria.garmentTypeId());
+        }
+        if (criteria.deadlineStart() != null && criteria.deadlineEnd() != null) {
+            query.setParameter("deadlineStart", criteria.deadlineStart());
+            query.setParameter("deadlineEnd", criteria.deadlineEnd());
+        }
+        if (criteria.statuses() != null && !criteria.statuses().isEmpty()) {
+            query.setParameter("statuses", criteria.statuses());
+        }
+    }
+
+    private Map<UUID, List<String>> findGarmentNames(List<UUID> orderIds) {
+        if (orderIds.isEmpty()) {
+            return Map.of();
+        }
+        List<Object[]> rows = em.createQuery(
+                "select i.order.id, i.garmentName " +
+                        "from OrderItemEntity i " +
+                        "where i.order.id in :orderIds " +
+                        "order by i.order.id, i.id",
+                Object[].class)
+                .setParameter("orderIds", orderIds)
+                .getResultList();
+        return groupNamesByOrder(rows);
+    }
+
+    private Map<UUID, List<String>> findServiceNames(List<UUID> orderIds) {
+        if (orderIds.isEmpty()) {
+            return Map.of();
+        }
+        List<Object[]> rows = em.createQuery(
+                "select s.orderItem.order.id, s.serviceName " +
+                        "from OrderItemServiceEntity s " +
+                        "where s.orderItem.order.id in :orderIds and s.orderItem.deleted = false " +
+                        "order by s.orderItem.order.id, s.orderItem.id, s.id",
+                Object[].class)
+                .setParameter("orderIds", orderIds)
+                .getResultList();
+        return groupNamesByOrder(rows);
+    }
+
+    private Map<UUID, List<String>> groupNamesByOrder(List<Object[]> rows) {
+        Map<UUID, List<String>> grouped = new HashMap<>();
+        for (Object[] row : rows) {
+            String name = (String) row[1];
+            if (name == null || name.isBlank()) {
+                continue;
+            }
+            grouped.computeIfAbsent((UUID) row[0], ignored -> new ArrayList<>()).add(name);
+        }
+        return grouped;
     }
 
 }
